tests/proc-macro-tests/tests/expand_args/fail/macro.error.txt
error: proc macro panicked
 --> /tests/expand_args/fail/macro.rs:5:5
  |
5 |     my_proc_macro_panics! { struct Test; }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: test
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
